src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-dhF500-wfsBN-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault window height: F500\nwant fullscreen: BN\ntabbed"
expression: snapshot
---
initial configure:
size: 607 × 500, bounds: 1239 × 688, states: []

post-map configures:
size: 607 × 500, bounds: 1239 × 688, states: [Activated]
