src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-dhP0.5-b-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault window height: P0.5\nborder on\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 599 × 328, bounds: 1231 × 680, states: []

post-map configures:
size: 599 × 328, bounds: 1231 × 680, states: [Activated]
